# lsp-mcp-rs

./: Cargo.toml  README.md  config.toml  server.json
src/: client.rs  config.rs  framed_stdio.rs  main.rs  protocol.rs  transport.rs
