[package]
name = "lsp-mcp-rs"
version = "0.1.0"
edition = "2021"
description = "Universal MCP bridge to any LSP server"
authors = ["PhiDEX"]

[dependencies]
# MCP SDK - use this instead of hand-rolling!
rmcp = { version = "0.8", features = ["server", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full", "process", "io-util", "sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# LSP types
lsp-types = "0.97"

# Utils
anyhow = "1"
futures = "0.3"
dashmap = "6"
dirs = "5"

# Schema generation for MCP
schemars = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
